pressing pgup or pgdn in any scrollable area irreversably alters scrolling speed #50570

Closed
opened 2017-02-01 07:22:32 +01:00 by Keith Stathem · 7 comments

System Information
Operating system and graphics card: multiple systems, Linux Mint and Windows 7

Blender Version
Broken: 2.78a, 2.74
Worked: unknown

Short description of error
pressing Page Up or Page Down in any scrollable area causes the scroll wheel to mimic the key pressed in place of its usual behavior. This lasts either until blender is closed and reopened, or until I start a new project, depending on the system configuration.

Exact steps for others to reproduce the error
open test1.blend (just the default cube)
open the User Preferences window, click on Add-ons tab
with the mouse inside this scrollable area, press and release Page Down
scroll up and down and observe the difference in scrolling speed
the additional files were saved after exhibiting this behavior on two different systems in various configurations

test1.blend

test2.blend

test3.blend

test4.blend

test5.blend

**System Information** Operating system and graphics card: multiple systems, Linux Mint and Windows 7 **Blender Version** Broken: 2.78a, 2.74 Worked: unknown **Short description of error** pressing Page Up or Page Down in any scrollable area causes the scroll wheel to mimic the key pressed in place of its usual behavior. This lasts either until blender is closed and reopened, or until I start a new project, depending on the system configuration. **Exact steps for others to reproduce the error** open test1.blend (just the default cube) open the User Preferences window, click on Add-ons tab with the mouse inside this scrollable area, press and release Page Down scroll up and down and observe the difference in scrolling speed the additional files were saved after exhibiting this behavior on two different systems in various configurations [test1.blend](https://archive.blender.org/developer/F443576/test1.blend) [test2.blend](https://archive.blender.org/developer/F443577/test2.blend) [test3.blend](https://archive.blender.org/developer/F443561/test3.blend) [test4.blend](https://archive.blender.org/developer/F443578/test4.blend) [test5.blend](https://archive.blender.org/developer/F443562/test5.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kstathem

Added subscriber: @kstathem

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-02-01 12:52:10 +01:00

Odd nobody noted that before, must have been around since ages… Easy fix, incoming, thanks for the report :)

Odd nobody noted that before, must have been around since ages… Easy fix, incoming, thanks for the report :)

This issue was referenced by fb61711b1a

This issue was referenced by fb61711b1a9ef96becec8eb15916f057055f567b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed as duplicate of #50650

Closed as duplicate of #50650
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50570
No description provided.